Created and tested the test cases for frontend testing

--- a/instrumented/index.html
+++ b/instrumented/index.html
@@ -143,7 +143,10 @@
         Loading books, please wait...
     </div>
 
-    <div id="bookContainer"></div>
+    <div id="bookContainer"><div id="noBooksMessage" style="display: none; text-align: center; font-size: 18px; color: red;">
+        No books found matching your search criteria.
+    </div>
+    </div>
     <!-- Modal for Book Details -->
     <div id="bookModal" class="modal" style="display:none;">
         <div class="modal-content">
