achieved 100% for frontend search test

--- a/instrumented/index.html
+++ b/instrumented/index.html
@@ -142,10 +142,10 @@
     <div id="loading" style="display: none; text-align: center; font-size: 18px;">
         Loading books, please wait...
     </div>
+  
 
-    <div id="bookContainer"><div id="noBooksMessage" style="display: none; text-align: center; font-size: 18px; color: red;">
-        No books found matching your search criteria.
-    </div>
+    <div id="bookContainer">
+        
     </div>
     <!-- Modal for Book Details -->
     <div id="bookModal" class="modal" style="display:none;">
