Created and tested the test cases for frontend testing

--- a/instrumented/index.html
+++ b/instrumented/index.html
@@ -142,10 +142,11 @@
     <div id="loading" style="display: none; text-align: center; font-size: 18px;">
         Loading books, please wait...
     </div>
-
     
 
-    <div id="bookContainer"></div>
+    <div id="bookContainer">
+        
+    </div>
     <!-- Modal for Book Details -->
     <div id="bookModal" class="modal" style="display:none;">
         <div class="modal-content">
